07_retirement/grade.txt
Grading at Sat Aug  4 08:41:39 UTC 2018
Attempting to compile retirement.c
retirement.c:9:11: error: expected ‘;’, identifier or ‘(’ before ‘struct’
   typedef struct  _retire_info retire_info;
           ^
retirement.c:11:47: error: expected declaration specifiers or ‘...’ before ‘retire_info’
 void retirement(int startAge, double initial, retire_info working, retire_info retired){
                                               ^
retirement.c:11:68: error: expected declaration specifiers or ‘...’ before ‘retire_info’
 void retirement(int startAge, double initial, retire_info working, retire_info retired){
                                                                    ^
retirement.c: In function ‘main’:
retirement.c:34:3: error: statement with no effect [-Werror=unused-value]
   retire_info working, retired;
   ^
retirement.c:34:15: error: expected ‘;’ before ‘working’
   retire_info working, retired;
               ^
retirement.c:35:3: error: ‘working’ undeclared (first use in this function)
   working.months=489;
   ^
retirement.c:35:3: note: each undeclared identifier is reported only once for each function it appears in
retirement.c:38:3: error: ‘retired’ undeclared (first use in this function)
   retired.months=384;
   ^
retirement.c:41:3: error: implicit declaration of function ‘retirement’ [-Werror=implicit-function-declaration]
   retirement(27, 21345, working, retired);
   ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
